tests/lime/fail/tokens/macro_first/byte_48.wsa
macro 0 [push 48] 0
